sample/codepkg/objects/Care_Recipient_Information__c.object
<CustomObject>
    <fields>
        <fullName>DMD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DMD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisabilityNumber__c</fullName>
        <label>DisabilityNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disability</label>
        <type>Checkbox</type>
    </fields>
    <label>Care_Recipient_Information</label>
    <nameField>
        <label>Care_Recipient_Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care_Recipient_Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>